src/assets/css/App.css
/* Main CSS file */
@import url('https://fonts.googleapis.com/css?family=Lato:300,400,900');
@import url('https://fonts.googleapis.com/icon?family=Material+Icons');

/* Importing Settings */
@import 'settings/_colors.css';
@import 'settings/_reset.css';

/* Importin components */
@import 'components/_main.css';
@import 'components/_header.css';
@import 'components/_sidebar.css';
@import 'components/_input.css';
@import 'components/_buttons.css';
@import 'components/_size.css';
@import 'components/_params.css';
@import 'components/_screenContainer.css';

#root {
  width: 100vw;
  height: 100vh;
  font-family: 'Lato', sans-serif;
}

